# aruco_visual_calibration

./: .gitignore  __freq_cmds
aruco_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aruco_moveit_config/config/: joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  name.ros2_control.xacro  name.srdf  name.urdf.xacro
aruco_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
aruco_perception/: CMakeLists.txt  package.xml
aruco_perception/config/: aruco_detector_real.yaml  aruco_detector_sim.yaml  calibration_broadcaster_real.yaml  calibration_broadcaster_sim.yaml  image_subscriber_sim.yaml
aruco_perception/include/aruco_perception/: aruco_detector_node.hpp  calibration_broadcaster_node.hpp  image_subscriber_node.hpp  orientation_averaging.hpp
aruco_perception/launch/: aruco_detector.launch.py  bringup_aruco_pipeline.launch.py  calibration_broadcaster.launch.py
aruco_perception/src/aruco_detector/: aruco_detector_node.cpp  main.cpp
aruco_perception/src/calibration_broadcaster/: calibration_broadcaster_node.cpp  main.cpp  orientation_averaging.cpp
aruco_perception/src/image_subscriber/: image_subscriber_node.cpp  main.cpp
aruco_perception_yolo_bridge/: CMakeLists.txt  package.xml
aruco_perception_yolo_bridge/aruco_perception_yolo_bridge/: yolo_marker_bridge_node.py
aruco_perception_yolo_bridge/config/: yolo_marker_bridge_real.yaml  yolo_marker_bridge_sim.yaml
aruco_perception_yolo_bridge/launch/: bringup_yolo_pipeline.launch.py  yolo_marker_bridge.launch.py
aruco_perception_yolo_bridge/resources/scripts/shell/: start_inference_server.sh  wait_for_inference_server.sh
calibration_validation/: CMakeLists.txt  package.xml
calibration_validation/calibration_validation/: validate_calibration_sim.py
depth_perception/: CMakeLists.txt  package.xml
depth_perception/config/: depth_perception_real.yaml  depth_perception_sim.yaml
depth_perception/include/depth_perception/: depth_perception_node.hpp
depth_perception/launch/: depth_perception.launch.py
depth_perception/src/depth_perception_node/: depth_perception_node.cpp  main.cpp
orchestrator/: CMakeLists.txt  package.xml
orchestrator/config/: calibration_orchestrator_real.yaml  calibration_orchestrator_sim.yaml
orchestrator/include/orchestrator/: calibration_orchestrator_node.hpp
orchestrator/launch/: bringup_orchestrator_pipeline.launch.py  calibration_orchestrator.launch.py
orchestrator/src/orchestrator/: calibration_orchestrator_node.cpp  main.cpp
real_moveit_config/: .setup_assistant  package.xml
real_moveit_config/config/: moveit_controllers.yaml  name.srdf  name.urdf.xacro
real_ur3e_description/: CMakeLists.txt  package.xml
real_ur3e_description/urdf/: real_ur3e_robotiq85.urdf.xacro
real_ur3e_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
real_ur3e_moveit_config/config/: moveit.rviz  moveit_controllers.yaml  moveit_controllers_backup_before_fix.yaml  name.srdf
real_ur3e_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
resources/docs/: PROJECT_OVERVIEW.md  README.md  architecture.md  aruco_moveit_config.md  aruco_perception.md  calibration_process.md  calibration_validation.md  visual_calibration_moveit.md
resources/grafana/: install_grafana.sh
resources/info/: real_information_observations.md  sim_information_observations.md
resources/jenkins/: Jenkinsfile.sim  Jenkinsfile.sim.stage1-build  install_jenkins.sh
resources/scripts/: aliases.sh  setup.sh  sim_tmux_base.sh  sim_tmux_main1.sh  tf_debug_markers.py  tmux.conf  visual_calibration_sim.yaml
sim_ur3e_moveit_config/: CMakeLists.txt  package.xml
sim_ur3e_moveit_config/config/: moveit.rviz  moveit_controllers.yaml  name.srdf  ompl_planning.yaml
sim_ur3e_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
visual_calibration_bringup/: CMakeLists.txt  package.xml
visual_calibration_bringup/launch/: bringup_base.launch.py  bringup_main1.launch.py  wait_for_node_action.py
visual_calibration_moveit/: CMakeLists.txt  package.xml
visual_calibration_moveit/config/: preset_poses_real.yaml  preset_poses_sim.yaml  scene_objects_real.yaml  scene_objects_sim.yaml  simple_trajectory_real.yaml  simple_trajectory_sim.yaml  trajectory_planner_real.yaml  trajectory_planner_sim.yaml
visual_calibration_moveit/include/visual_calibration_moveit/: mtc_trajectory.hpp  planning_scene_setup.hpp  preset_poses.hpp  scene_object_types.hpp  simple_trajectory.hpp  trajectory_planner.hpp
visual_calibration_moveit/launch/: bringup_full_real.launch.py  bringup_full_real.xml  bringup_full_sim.launch.py  bringup_full_sim.xml  bringup_full_sim_README.md  bringup_moveit_pipeline.launch.py  planning_scene_setup.launch.py  simple_trajectory.launch.py  trajectory_planner.launch.py
visual_calibration_moveit/src/: planning_scene_setup.cpp
visual_calibration_moveit/src/mtc_trajectory/: main.cpp  mtc_trajectory.cpp
visual_calibration_moveit/src/planning_scene_setup/: main.cpp  planning_scene_setup.cpp  scene_object_types.cpp
visual_calibration_moveit/src/simple_trajectory/: main.cpp  simple_trajectory.cpp
visual_calibration_moveit/src/trajectory_planner/: main.cpp  preset_poses.cpp  trajectory_planner.cpp
visual_calibration_msgs/: CMakeLists.txt  package.xml
visual_calibration_msgs/action/: AutoCalibrate.action  Calibrate.action
visual_calibration_msgs/msg/: AutoCalibrateStatus.msg  Detection2D.msg  Detection2DArray.msg  PlanningFailure.msg
visual_calibration_msgs/srv/: GetPolygonWaypoints.srv  GetPresetPose.srv  GetStandoffPose.srv  MoveToPreset.srv  SetDetectorMode.srv  TracePath.srv
(+63 files in other folders)
