<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_perception</name>
  <version>0.0.0</version>
  <description>ArUco marker detection and camera pose estimation for the UR3e visual calibration project.</description>
  <maintainer email="karthikn.balasubramanian@gmail.com">rosman</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>visual_calibration_msgs</depend>
  <depend>libopencv-dev</depend>

  <!-- New launch/bringup_aruco_pipeline.launch.py (staged/ordered bringup,
       see visual_calibration_moveit/launch/bringup_full_sim_README.md)
       uses rclpy directly (via OpaqueFunction) to poll ros2-graph node
       presence as a readiness gate — not previously needed by this
       package's plain C++ nodes. -->
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
