<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_perception_yolo_bridge</name>
  <version>0.0.0</version>
  <description>rclpy node bridging the ROS graph to the YOLO-pipeline's isolated-venv HTTP inference server (~/yolo_venv, inference_server.py). Drop-in alternative to aruco_perception's classical aruco_detector_node for the aruco_marker case: subscribes to the camera image/camera_info topics, POSTs frames to the local inference server over plain HTTP, and republishes the result as geometry_msgs/PoseStamped on the same pose_topic (/aruco_perception/marker_pose) so calibration_broadcaster_node needs zero changes regardless of which detector produced the pose. Also publishes cup_holder/hole 2D pixel centroids continuously as visual_calibration_msgs/Detection2DArray on /aruco_perception/detections_2d, consumed by depth-perception's own hole/cupholder 3D pose pipeline. Deliberately kept out of aruco_perception (a pure ament_cmake/C++ package) and out of any process that imports both ultralytics and rclpy/cv_bridge -- see the ABI-isolation rule in error-mitigation.md #15.</description>
  <maintainer email="karthikn.balasubramanian@gmail.com">rosman</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>python3-requests</depend>
  <depend>visual_calibration_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>