<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orchestrator</name>
  <version>0.0.0</version>
  <description>Ties trajectory_planner's motion services and calibration_broadcaster_node's ~/calibrate action into one auto-calibrate sequence (move to cal_ready, optional auto-center on the marker, then calibrate). Both of those nodes stay unaware this orchestration exists — trajectory_planner remains a dumb mover, calibration_broadcaster_node remains focused only on sampling/averaging/broadcasting.</description>
  <maintainer email="karthikn.balasubramanian@gmail.com">rosman</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visual_calibration_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- New launch/bringup_orchestrator_pipeline.launch.py (staged/ordered
       bringup, see visual_calibration_moveit/launch/bringup_full_sim_README.md)
       IncludeLaunchDescription's both of these packages' own
       bringup_*.launch.py, and uses rclpy directly (via OpaqueFunction) to
       poll ros2-graph node presence as a readiness gate — neither was
       previously needed by this package's plain C++ node.

       exec_depend on visual_calibration_moveit REMOVED (2026-07-23,
       explicit user direction) — it formed a circular package dependency
       with visual_calibration_moveit's own matching exec_depend on
       orchestrator (both added for the same reason: each package's new
       bringup_*.launch.py IncludeLaunchDescription's the other's bringup
       launch file — a genuine mutual runtime dependency between launch
       files that colcon's package-level topological sort cannot
       represent, since it doesn't distinguish "depends on this package's
       launch file" from "depends on this package's library"). Removed
       from THIS side to unblock local builds; visual_calibration_moveit's
       exec_depend on this package was left in place. If
       bringup_orchestrator_pipeline.launch.py's IncludeLaunchDescription
       of visual_calibration_moveit's bringup file needs this dependency
       restored, reconcile with whoever owns that bringup work first
       rather than just re-adding it, since the cycle will return. -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>aruco_perception</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>