<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>real_ur3e_description</name>
  <version>0.1.0</version>
  <description>
    Real-robot UR3e + Robotiq 85 combining xacro — the MoveIt Setup Assistant
    input source for real_moveit_config. A project-owned, stripped variant
    of Universal_Robots_ROS2_Description's ur_moveit.urdf.xacro: same
    arm+gripper instantiation (matches the real robot's actual TF chain,
    tool0 -> robotiq_85_base_link), with ground_plane_box (a sim floor prop)
    and the sensor_r430 wrist camera (a simulated RealSense at an arbitrary
    pose — the real camera is a D415, not URDF-attached, and separately
    bridged over Zenoh) removed.
  </description>
  <maintainer email="karthikn.balasubramanian@gmail.com">Karthikeyan Balasubramanian</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ur_description</exec_depend>
  <exec_depend>robotiq_85_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>