<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visual_calibration_bringup</name>
  <version>0.0.0</version>
  <description>Top-level launch files that combine visual_calibration's other packages into two ordered groups (environment/sim setup, calibration pipeline), replacing the equivalent tmux scripts with ROS-native launch sequencing.</description>
  <maintainer email="karthikn.balasubramanian@gmail.com">rosman</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>the_construct_office_gazebo</exec_depend>
  <exec_depend>aruco_moveit_config</exec_depend>
  <exec_depend>visual_calibration_moveit</exec_depend>
  <exec_depend>aruco_perception</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
